@@ -14,13 +14,14 @@ import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 /**
- * Tests for HeadLampStatus struct.
+ * Tests for HeadLampStatus struct (new params only).
  *
  * Created by enikolsky on 2014-02-07.
  */
 public class HeadLampStatusTest extends TestCase {
     private static final String AMBIENT_LIGHT_SENSOR_STATUS =
             "ambientLightSensorStatus";
+    private static final String LOW_BEAMS_ON = "lowBeamsOn";
 
     public void testMessageShouldBeCreated() {
         HeadLampStatus msg = new HeadLampStatus();
@@ -32,12 +33,15 @@ public class HeadLampStatusTest extends TestCase {
         HeadLampStatus msg = new HeadLampStatus();
 
         final AmbientLightStatus als = AmbientLightStatus.NIGHT;
+        final boolean lowBeamsOn = true;
 
         msg.setAmbientLightSensorStatus(als);
+        msg.setLowBeamsOn(lowBeamsOn);
 
         JSONObject jsonObject = msg.serializeJSON();
         assertThat(jsonObject.getString(AMBIENT_LIGHT_SENSOR_STATUS),
                 is(als.toString()));
+        assertThat(jsonObject.getBoolean(LOW_BEAMS_ON), is(lowBeamsOn));
     }
 
     public void testDeserializedMessageWithoutParamsShouldContainNullFields()
@@ -48,6 +52,7 @@ public class HeadLampStatusTest extends TestCase {
 
         assertThat(msg, notNullValue());
         assertThat(msg.getAmbientLightSensorStatus(), nullValue());
+        assertThat(msg.getLowBeamsOn(), nullValue());
     }
 
     public void testAmbientLightSensorStatusGetterShouldReturnSetValue()
@@ -103,5 +108,59 @@ public class HeadLampStatusTest extends TestCase {
                 JsonRPCMarshaller.deserializeJSONObject(jsonObject));
         assertThat(msg, notNullValue());
         assertThat(msg.getAmbientLightSensorStatus(), nullValue());
+    }
+
+    public void testLowBeamsOnGetterShouldReturnSetValue()
+            throws JSONException {
+        HeadLampStatus msg = new HeadLampStatus();
+
+        final boolean lowBeamsOn = true;
+        msg.setLowBeamsOn(lowBeamsOn);
+
+        assertThat(msg.getLowBeamsOn(), is(lowBeamsOn));
+    }
+
+    public void testSettingNullLowBeamsOnShouldRemoveValue()
+            throws JSONException {
+        HeadLampStatus msg = new HeadLampStatus();
+
+        msg.setLowBeamsOn(true);
+        msg.setLowBeamsOn(null);
+
+        assertThat(msg.getLowBeamsOn(), nullValue());
+    }
+
+    public void testDeserializedLowBeamsOnBooleanShouldContainValue()
+            throws JSONException {
+        JSONObject jsonObject = new JSONObject();
+        final boolean lowBeamsOn = true;
+        jsonObject.put(LOW_BEAMS_ON, lowBeamsOn);
+
+        HeadLampStatus msg = new HeadLampStatus(
+                JsonRPCMarshaller.deserializeJSONObject(jsonObject));
+        assertThat(msg, notNullValue());
+        assertThat(msg.getLowBeamsOn(), is(lowBeamsOn));
+    }
+
+    public void testDeserializedLowBeamsOnAsIntShouldBeNull()
+            throws JSONException {
+        JSONObject jsonObject = new JSONObject();
+        jsonObject.put(LOW_BEAMS_ON, 4);
+
+        HeadLampStatus msg = new HeadLampStatus(
+                JsonRPCMarshaller.deserializeJSONObject(jsonObject));
+        assertThat(msg, notNullValue());
+        assertThat(msg.getLowBeamsOn(), nullValue());
+    }
+
+    public void testDeserializedLowBeamsOnAsStringShouldBeNull()
+            throws JSONException {
+        JSONObject jsonObject = new JSONObject();
+        jsonObject.put(LOW_BEAMS_ON, "4");
+
+        HeadLampStatus msg = new HeadLampStatus(
+                JsonRPCMarshaller.deserializeJSONObject(jsonObject));
+        assertThat(msg, notNullValue());
+        assertThat(msg.getLowBeamsOn(), nullValue());
     }
 }
