@@ -1,4 +1,5 @@
 [CW7]
+* SyncProxyAndroid SDK: Update HeadLampStatus struct. Add headLampStatus parameter to OnVehicleData notification.
 * SyncProxyAndroid SDK: Add displayCapabilities parameter to SetDisplayLayoutResponse class.
 + SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct, ScreenParams struct. Update DisplayCapabilities struct.
 
